--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -174,7 +174,8 @@
         }
         .img-wrap {
           position: absolute;
-          max-width: 80px;
+          width: 80px;
+          height: 80px;
           top: -40px;
           left: 0;
           right: 0;
